Fix for the selected value not showing up in post type categories and tags list

--- a/_assets/public/css/frontend/style.css
+++ b/_assets/public/css/frontend/style.css
@@ -1464,9 +1464,6 @@ input:checked + .toggle-bg{
 .h-full{
   height: 100%;
 }
-.min-h-\[300px\]{
-  min-height: 300px;
-}
 .min-h-\[290px\]{
   min-height: 290px;
 }
